--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,7 +22,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    
+
 
     .player {
         img {
@@ -33,7 +33,7 @@ body {
             filter: grayscale(100%)
         }
 
-        
+
     }
 }
 
@@ -47,3 +47,24 @@ body {
 
 }
 
+.back {
+    font-size: 20px;
+    background-color: transparent;
+    border: 1px solid #fff;
+    opacity: .9;
+    border-radius: 15px;
+    padding: 5px;
+    text-align: center;
+    width: 100px;
+    color: #fff;
+    position: absolute;
+    top: 5%;
+    left: 2.3%;
+    text-decoration: none;
+    margin: 0;
+    animation: animacao 0.7s ease;
+}
+
+.back:hover {
+    opacity: 1;
+}
